--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <br><br><br><br><br><br><br><br>
 <div id="credit">
     <h1>Credits</h1>
-<p>Front work and website done by Kurren Singh <br> JSON Database done by Mahak Kumawat and Mesbahur Sakib</p>
+<p>Front work and website done by Kurren Singh <br> JSON Database done by Mahak Kumawat and Mesbahur Sakib<br>Presentation done by Jayden Castro</p>
 </div>
 
 </div>
